# im-posenorm-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
libs/im-posenorm-eval/: CMakeLists.txt
libs/im-posenorm-eval/include/im-posenorm-eval/: Config.h  Eval.h
libs/im-posenorm-eval/src/: Config.cpp  Definitions.h  Eval.cpp  Random.cpp  Random.h
libs/im-posenorm-lib/: CMakeLists.txt
libs/im-posenorm-lib/include/im-posenorm-lib/: IMPoseNorm.h
libs/im-posenorm-lib/include/im-posenorm-lib/Geometry/: AABox.h  IShape.h  Mesh.h  PointCloud.h
libs/im-posenorm-lib/include/im-posenorm-lib/IO/: PLY.h  PLYReaderWriterBase.h
libs/im-posenorm-lib/include/im-posenorm-lib/IO/In/: PLYReader.h
libs/im-posenorm-lib/src/: Config.h  Grid2D.h  HorizontalPoseNormalization.cpp  HorizontalPoseNormalization.h  HorizontalPoseUnambiguation.cpp  HorizontalPoseUnambiguation.h  IMPoseNorm.cpp  Util.cpp  Util.h  VerticalPoseNormalization.cpp  VerticalPoseNormalization.h  WeightedValue.h
libs/im-posenorm-lib/src/Geometry/: AABox.cpp  GeometryUtil.cpp  GeometryUtil.h  Mesh.cpp  PointCloud.cpp
libs/im-posenorm-lib/src/IO/: IOUtil.cpp  IOUtil.h  PLY.cpp  PLYReaderWriterBase.cpp
libs/im-posenorm-lib/src/IO/In/: ASCIIDecoder.cpp  ASCIIDecoder.h  BinaryDecoder.cpp  BinaryDecoder.h  HeaderContent.cpp  HeaderContent.h  IDecoder.cpp  IDecoder.h  InUtil.cpp  InUtil.h  PLYReader.cpp  Property.cpp  Property.h  ShapeData.cpp  ShapeData.h
libs/im-posenorm-util/: CMakeLists.txt
libs/im-posenorm-util/include/im-posenorm-util/Parallel/: Parallel.h
libs/im-posenorm-util/include/im-posenorm-util/Statistics/: Statistics.h
libs/im-posenorm-util/include/im-posenorm-util/Time/: TimeReporter.h  TimeUtil.h  Timer.h
libs/im-posenorm-util/src/Parallel/: Parallel.cpp
libs/im-posenorm-util/src/Statistics/: Statistics.cpp
libs/im-posenorm-util/src/Time/: TimeReporter.cpp  TimeUtil.cpp  Timer.cpp
